Fixing some minor alignment issues in control bars

--- a/client/src/css/ui.css
+++ b/client/src/css/ui.css
@@ -523,7 +523,7 @@ h3 {
 	width: 24px;
 	height: 24px;
 	vertical-align: middle;
-	margin: 0 5px;
+	margin: 0 5px 0 0;
 }
 
 .character-control-container {
@@ -612,7 +612,7 @@ h3 {
 	display: flex;
 	flex-direction: column;
 	gap: 5px;
-	text-align: center;
+	text-align: left;
 }
 
 .control-bar-actions-moves-value {
